Checkpointing the DiaSession work for #296

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,5 +3,6 @@
     <packageSources>
         <add key="AppVeyor NUnit CI Feed" value="https://ci.appveyor.com/nuget/nunit" />
         <add key="NUnit MyGet Feed" value="https://www.myget.org/F/nunit/api/v2" />
+        <add key="vstest" value="https://dotnet.myget.org/F/vstest/auth/967ad631-d24c-4c0e-bece-922de3064956/api/v3/index.json" />
     </packageSources>
 </configuration>
