--- a/src/NUnitTestAdapter/NUnit3TestAdapter.csproj
+++ b/src/NUnitTestAdapter/NUnit3TestAdapter.csproj
@@ -34,7 +34,7 @@
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <PackageReference Include="Microsoft.VisualStudio.TestPlatform.ObjectModel" Version="0.0.3" PrivateAssets="All" />
-    <PackageReference Include="Mono.Cecil" Version="0.9.6.1" />
+    <PackageReference Include="Microsoft.Internal.Dia.Interop" Version="14.0.0" />
     <PackageReference Include="nunit.engine" Version="3.6.0" PrivateAssets="All" />
   </ItemGroup>
 
@@ -42,7 +42,6 @@
     <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.1.0" />
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="15.0.0" PrivateAssets="All" />
-    <PackageReference Include="Mono.Cecil" Version="0.10.0-beta4" />
     <PackageReference Include="nunit.engine.netstandard" Version="3.7.0-alpha1" />
   </ItemGroup>
 
